--- a/README
+++ b/README
@@ -2,4 +2,4 @@
 
 to run, run main.py
 
-<video src=https://clipchamp.com/watch/Y6NofV8Jm3I?utm_source=share&utm_medium=social&utm_campaign=watch width=180/>
+<video src='https://clipchamp.com/watch/Y6NofV8Jm3I' width=180/>
