--- a/README
+++ b/README
@@ -2,9 +2,4 @@
 
 to run, run main.py
 
-<div style="position:relative;width:fit-content;height:fit-content;">
-            <a style="position:absolute;top:20px;right:1rem;opacity:0.8;" href="https://clipchamp.com/watch/Y6NofV8Jm3I?utm_source=embed&utm_medium=embed&utm_campaign=watch">
-                <img style="height:22px;" src="https://clipchamp.com/e.svg" alt="Made with Clipchamp" />
-            </a>
-            <iframe allow="autoplay;" allowfullscreen style="border:none" src="https://clipchamp.com/watch/Y6NofV8Jm3I/embed" width="640" height="360"></iframe>
-          </div>
+video demo: https://clipchamp.com/watch/Y6NofV8Jm3I?utm_source=embed&utm_medium=embed&utm_campaign=watch
