--- a/README
+++ b/README
@@ -2,4 +2,5 @@
 
 to run, run main.py
 
-video demo: https://clipchamp.com/watch/Y6NofV8Jm3I?utm_source=embed&utm_medium=embed&utm_campaign=watch
+![nlp_a3_demo - Made with Clipchamp_1675314459109](https://user-images.githubusercontent.com/57128798/216236749-fdb15581-f18a-4981-a53a-7e834996001a.gif)
+
